finished styles for contact page

--- a/public/css/_colors.scss
+++ b/public/css/_colors.scss
@@ -21,3 +21,4 @@ $red: #9A4645;
 		$op-black: rgba(3, 17, 27, 0.7);
 		$sup-op-black: rgba(3, 17, 27, 0.4);
 	$trout: #4B545B;
+	$submitGreen: #39B54A;
