--- a/public/css/_contact.css
+++ b/public/css/_contact.css
@@ -1,21 +1,21 @@
 /*
 Error: Undefined variable: "$highlight-shadow".
-        on line 18 of _contact.scss
+        on line 9 of _contact.scss
 
-13: 
-14: 		border-top-left-radius:0.3vw;
-15: 		border-top-right-radius:0.3vw;
-16: 		border-bottom-right-radius:0.2vw;
-17: 		background-color:white;
-18: 		box-shadow:0.2vw 0.2vw 3vw $highlight-shadow;
-19: 
-20: 		header{
-21: 			display:flex;
-22: 
-23: 			height:5vh;
+4: 
+5: 
+6: 	justify-content:space-around;
+7: 	#deets:hover{
+8: 		transform:scale(1.007);
+9: 		box-shadow:0.3vw 0.3vw 0.8vw $highlight-shadow;
+10: 	}
+11: 	#deets{
+12: 
+13: 		transition:transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+14: 		position:relative;
 
 Backtrace:
-_contact.scss:18
+_contact.scss:9
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
@@ -82,4 +82,4 @@ _contact.scss:18
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$highlight-shadow\".\A         on line 18 of _contact.scss\A \A 13: \A 14: 		border-top-left-radius:0.3vw;\A 15: 		border-top-right-radius:0.3vw;\A 16: 		border-bottom-right-radius:0.2vw;\A 17: 		background-color:white;\A 18: 		box-shadow:0.2vw 0.2vw 3vw $highlight-shadow;\A 19: \A 20: 		header{\A 21: 			display:flex;\A 22: \A 23: 			height:5vh;"; }
+  content: "Error: Undefined variable: \"$highlight-shadow\".\A         on line 9 of _contact.scss\A \A 4: \A 5: \A 6: 	justify-content:space-around;\A 7: 	#deets:hover{\A 8: 		transform:scale(1.007);\A 9: 		box-shadow:0.3vw 0.3vw 0.8vw $highlight-shadow;\A 10: 	}\A 11: 	#deets{\A 12: \A 13: 		transition:transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;\A 14: 		position:relative;"; }
