fixed timing on project page animations

--- a/public/html/views/proj.html
+++ b/public/html/views/proj.html
@@ -1,8 +1,8 @@
 
 <div id="projPage">
   <div class="card">
-    <section class="body"><img class="vert vert2 wow fadeInLeft" src="./img/bNural-2.png" alt="A broken pic.." data-wow-duration="0.5s" data-wow-delay="1.105s"/><img class="hor hor1 wow fadeInLeft" src="./img/bNural-3.png" alt="A broken pic.." data-wow-duration="0.5s" data-wow-delay=".85s"/><img class="vert vert1 wow fadeInLeft" src="./img/bNural.png" alt="A broken pic.." data-wow-duration="0.5s" data-wow-delay="0.5s"/>
-      <article class="wow slideInRight" data-wow-duration="0.5s">
+    <section class="body"><img class="vert vert2 wow fadeInLeft" src="./img/bNural-2.png" alt="A broken pic.." data-wow-duration="0.3s" data-wow-delay="0.85s"/><img class="hor hor1 wow fadeInLeft" src="./img/bNural-3.png" alt="A broken pic.." data-wow-duration="0.3s" data-wow-delay="0.75s"/><img class="vert vert1 wow fadeInLeft" src="./img/bNural.png" alt="A broken pic.." data-wow-duration="0.3s" data-wow-delay="0.65s"/>
+      <article class="wow fadeInRight" data-wow-duration="0.5s">
         <h4>bNural</h4>
         <p>Is a site that I built for my no-server project at DevMountain.</p>
         <p>It allows the user to generate Binaural beats to control their mood.</p>
