--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -1,21 +1,9 @@
-
-
-
 header#mainHeader{
-	display:flex;
-	flex-direction: column;
 
-	width:100vw;
-	height:20vh;
-	margin-bottom:5vh;
 
 	background:$op-black;
 
-	align-items:center;
 	h1{
-		width:100vw;
-		// text-shadow:0px 0px 0 rgb(-27,-27,-27),-1px 1px 0 rgb(-31,-31,-31),-2px 2px 0 rgb(-34,-34,-34),-3px 3px 0 rgb(-38,-38,-38),-4px 4px 0 rgb(-41,-41,-41),-5px 5px 0 rgb(-44,-44,-44),-6px 6px 0 rgb(-48,-48,-48),-7px 7px 0 rgb(-51,-51,-51),-8px 8px 0 rgb(-55,-55,-55),-9px 9px 0 rgb(-58,-58,-58),-10px 10px 0 rgb(-61,-61,-61),-11px 11px 0 rgb(-65,-65,-65),-12px 12px 0 rgb(-68,-68,-68),-13px 13px 0 rgb(-72,-72,-72),-14px 14px 0 rgb(-75,-75,-75),-15px 15px 0 rgb(-78,-78,-78),-16px 16px 0 rgb(-82,-82,-82),-17px 17px 0 rgb(-85,-85,-85),-18px 18px 0 rgb(-89,-89,-89),-19px 19px 0 rgb(-92,-92,-92),-20px 20px 0 rgb(-95,-95,-95),-21px 21px 0 rgb(-99,-99,-99),-22px 22px 0 rgb(-102,-102,-102),-23px 23px 0 rgb(-106,-106,-106),-24px 24px 0 rgb(-109,-109,-109),-25px 25px 0 rgb(-112,-112,-112),-26px 26px 0 rgb(-116,-116,-116),-27px 27px 0 rgb(-119,-119,-119),-28px 28px 0 rgb(-123,-123,-123),-29px 29px 0 rgb(-126,-126,-126),-30px 30px 0 rgb(-129,-129,-129),-31px 31px 0 rgb(-133,-133,-133),-32px 32px 0 rgb(-136,-136,-136),-33px 33px 0 rgb(-140,-140,-140),-34px 34px 0 rgb(-143,-143,-143),-35px 35px 0 rgb(-146,-146,-146),-36px 36px 0 rgb(-150,-150,-150),-37px 37px 0 rgb(-153,-153,-153),-38px 38px 0 rgb(-157,-157,-157),-39px 39px 0 rgb(-160,-160,-160), -40px 40px 0 rgb(-163,-163,-163),-41px 41px 40px rgba(0,0,0,0.15),-41px 41px 1px rgba(0,0,0,0.5),0px 0px 40px rgba(0,0,0,.2);
-		height:15vh;
 
 		text-align:center;
 
@@ -23,44 +11,200 @@ header#mainHeader{
 		text-shadow: -2px 2px 1px $black;
 
 		font-family: 'Amatic SC', cursive;
-		font-size:2.5em;
-		line-height:15vh;
+
 	}
 	nav#mainNav{
-		width:100vw;
-		height:5vh;
+
 		border-bottom:2px solid $blue;
 		font-family: 'Titillium Web', sans-serif;
-		box-shadow:0 1vh 50px #3E4950;
+		// box-shadow:0 1vh 50px #3E4950;
 		ul{
 			display:flex;
-
-			width:90vw;
-			height:5vh;
 			margin:0 auto;
 			justify-content:space-around;
 			li{
+
 				transition: all 240ms ease-in;
 				text-align:center;
-				height:5vh;
-				font-size:.9em;
-				line-height:5vh;
+				border-top-right-radius:1em;
 				a,a:visited{
-					padding:1vh 2vw;
-					height:5vh;
+					border-top-right-radius:1em;
 					transition:all 0.222s ease-in;
 					text-decoration:none;
 					color:white;
 				}
 			}
 			a.active{
-				box-shadow:1px -1px $black;
-				border:solid $op-black 1px;
+				border-top-right-radius:0.5em;
 				border-bottom:none;
-				border-top-right-radius:0.1vw;
+
 				background-color:$black;
 				color:black;
 			}
 		}
 	}
+}
+
+
+
+@media only screen and (max-width: 425px) and (min-width:0px){
+body{
+	header#mainHeader{
+		display:flex;
+		flex-direction:column;
+		margin-bottom:4vh;
+
+		align-items:center;
+		justify-content:space-between;
+		height:20vh;
+		width:100vw;
+		h1{
+			height:15vh;
+			line-height:15vh;
+			font-size:1.6em;
+		}
+		nav#mainNav{
+			height:5vh;
+			width:100vw;
+			ul{
+				margin:0 auto;
+				margin-bottom:1vh;
+				height:4vh;
+				width:75vw;
+				display:flex;
+				align-items:center;
+				justify-content:space-around;
+				li{
+					font-size:.9em;
+					a,a:visited{
+
+						padding:1.1vh;
+						transition:all 0.222s ease-in;
+						text-decoration:none;
+						color:white;
+					}
+				}
+				a.active{
+
+
+					border-bottom:none;
+					border-top-right-radius:0.1vw;
+					background-color:$black;
+					color:black;
+
+				}
+			}
+		}
+	}
+}
+}
+
+@media only screen and (max-width: 768px) and (min-width: 426px){
+	body{
+		header#mainHeader{
+			display:flex;
+			flex-direction:column;
+			margin-bottom:4vh;
+
+			align-items:center;
+			justify-content:space-between;
+			height:20vh;
+			width:100vw;
+			h1{
+				height:15vh;
+				line-height:15vh;
+				font-size:1.6em;
+			}
+			nav#mainNav{
+				height:5vh;
+				width:100vw;
+				ul{
+					margin:0 auto;
+					margin-bottom:1vh;
+					height:4vh;
+					width:75vw;
+					display:flex;
+					align-items:center;
+					justify-content:space-around;
+					li{
+						font-size:.9em;
+						a,a:visited{
+
+							padding:1.1vh;
+							transition:all 0.222s ease-in;
+							text-decoration:none;
+							color:white;
+						}
+					}
+
+				}
+			}
+		}
+	}
+}
+@media only screen and (min-width: 769px){
+	header#mainHeader{
+		display:flex;
+		flex-direction: column;
+
+		width:100vw;
+		height:20vh;
+		margin-bottom:5vh;
+
+		background:$op-black;
+
+		align-items:center;
+		h1{
+			width:100vw;
+			// text-shadow:0px 0px 0 rgb(-27,-27,-27),-1px 1px 0 rgb(-31,-31,-31),-2px 2px 0 rgb(-34,-34,-34),-3px 3px 0 rgb(-38,-38,-38),-4px 4px 0 rgb(-41,-41,-41),-5px 5px 0 rgb(-44,-44,-44),-6px 6px 0 rgb(-48,-48,-48),-7px 7px 0 rgb(-51,-51,-51),-8px 8px 0 rgb(-55,-55,-55),-9px 9px 0 rgb(-58,-58,-58),-10px 10px 0 rgb(-61,-61,-61),-11px 11px 0 rgb(-65,-65,-65),-12px 12px 0 rgb(-68,-68,-68),-13px 13px 0 rgb(-72,-72,-72),-14px 14px 0 rgb(-75,-75,-75),-15px 15px 0 rgb(-78,-78,-78),-16px 16px 0 rgb(-82,-82,-82),-17px 17px 0 rgb(-85,-85,-85),-18px 18px 0 rgb(-89,-89,-89),-19px 19px 0 rgb(-92,-92,-92),-20px 20px 0 rgb(-95,-95,-95),-21px 21px 0 rgb(-99,-99,-99),-22px 22px 0 rgb(-102,-102,-102),-23px 23px 0 rgb(-106,-106,-106),-24px 24px 0 rgb(-109,-109,-109),-25px 25px 0 rgb(-112,-112,-112),-26px 26px 0 rgb(-116,-116,-116),-27px 27px 0 rgb(-119,-119,-119),-28px 28px 0 rgb(-123,-123,-123),-29px 29px 0 rgb(-126,-126,-126),-30px 30px 0 rgb(-129,-129,-129),-31px 31px 0 rgb(-133,-133,-133),-32px 32px 0 rgb(-136,-136,-136),-33px 33px 0 rgb(-140,-140,-140),-34px 34px 0 rgb(-143,-143,-143),-35px 35px 0 rgb(-146,-146,-146),-36px 36px 0 rgb(-150,-150,-150),-37px 37px 0 rgb(-153,-153,-153),-38px 38px 0 rgb(-157,-157,-157),-39px 39px 0 rgb(-160,-160,-160), -40px 40px 0 rgb(-163,-163,-163),-41px 41px 40px rgba(0,0,0,0.15),-41px 41px 1px rgba(0,0,0,0.5),0px 0px 40px rgba(0,0,0,.2);
+			height:15vh;
+
+			text-align:center;
+
+			color:white;
+			text-shadow: -2px 2px 1px $black;
+
+			font-family: 'Amatic SC', cursive;
+			font-size:2.5em;
+			line-height:15vh;
+		}
+		nav#mainNav{
+			width:100vw;
+			height:5vh;
+			border-bottom:2px solid $blue;
+			font-family: 'Titillium Web', sans-serif;
+			box-shadow:0 1vh 50px #3E4950;
+			ul{
+				display:flex;
+
+				width:90vw;
+				height:5vh;
+				margin:0 auto;
+				justify-content:space-around;
+				li{
+					transition: all 240ms ease-in;
+					text-align:center;
+					height:5vh;
+					font-size:.9em;
+					line-height:5vh;
+					a,a:visited{
+						padding:1vh 2vw;
+						height:5vh;
+						transition:all 0.222s ease-in;
+						text-decoration:none;
+						color:white;
+					}
+				}
+				a.active{
+					box-shadow:1px -1px $black;
+					border:solid $op-black 1px;
+					border-bottom:none;
+
+					background-color:$black;
+					color:black;
+				}
+			}
+		}
+	}
+
 }
