--- a/public/html/views/home.html
+++ b/public/html/views/home.html
@@ -6,7 +6,7 @@
     <article><img src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me"/>
       <div class="content">
         <p>I'm a beginner Web Developer, currently attending DevMountain.</p><a ui-sref="/contact">
-          <p>Contact Me</p></a>
+          <p>CONTACT ME</p></a>
       </div>
     </article>
   </div>
