--- a/public/html/views/home.pug
+++ b/public/html/views/home.pug
@@ -8,7 +8,7 @@
 			.content
 				p I'm a beginner Web Developer, currently attending DevMountain.
 				a(ui-sref="/contact")
-					p Contact Me
+					p CONTACT ME
 	.container
 		div(ng-repeat="item in posts", data-wow-duration="1.2s").post.wow.fadeInLeft
 			header
