--- a/public/css/_queries.css
+++ b/public/css/_queries.css
@@ -1,261 +1,121 @@
-@media only screen and (max-width: 425px) and (min-width: 0px) {
-  ui-view #home {
-    width: 100vw;
-    display: flex;
-    flex-direction: column-reverse; }
-    ui-view #home .post {
-      display: flex;
-      flex-direction: column;
-      margin: 0 auto;
-      width: 95vw; }
-      ui-view #home .post img {
-        margin: 0 auto;
-        width: 92vw; }
-      ui-view #home .post article p {
-        font-size: .9em;
-        line-height: 1.5em; }
-    ui-view #home #aboutMe {
-      display: flex;
-      flex-direction: column;
-      width: 100vw;
-      align-items: center; }
-      ui-view #home #aboutMe header {
-        width: 80vw;
-        text-align: center; }
-      ui-view #home #aboutMe article {
-        width: 100vw;
-        display: flex;
-        flex-direction: column; }
-        ui-view #home #aboutMe article img {
-          width: 80vw;
-          margin: 0 auto; }
-        ui-view #home #aboutMe article a, ui-view #home #aboutMe article a:visited, ui-view #home #aboutMe article a:hover {
-          color: black; }
-          ui-view #home #aboutMe article a p, ui-view #home #aboutMe article a:visited p, ui-view #home #aboutMe article a:hover p {
-            width: 30vw; }
-        ui-view #home #aboutMe article p {
-          width: 90vw;
-          margin: 0 auto;
-          padding: 2vh 0;
-          font-size: 1em;
-          text-align: center;
-          margin-bottom: 1vh; }
+/*
+Error: Undefined variable: "$blue".
+        on line 32 of _queries.scss
 
-  #contactPage {
-    flex-direction: column; }
-    #contactPage #deets {
-      margin: 0 auto;
-      width: 95vw;
-      margin-bottom: 3vh; }
-      #contactPage #deets header {
-        margin: 0 auto;
-        width: 95vw;
-        font-size: 0.6em; }
-      #contactPage #deets section ul {
-        width: 90vw;
-        margin: 0 auto; }
-        #contactPage #deets section ul li {
-          width: 90vw; }
-          #contactPage #deets section ul li h1 {
-            width: 20vw;
-            font-size: 0.8em; }
-          #contactPage #deets section ul li h2 {
-            width: 70vw;
-            font-size: 0.8em;
-            margin-left: 3vw; }
-          #contactPage #deets section ul li a {
-            width: 70vw;
-            padding-left: 3vw; }
-            #contactPage #deets section ul li a h2 {
-              width: 70vw;
-              font-size: 0.8em;
-              margin: 0;
-              padding: 0; }
-    #contactPage #message {
-      margin: 0 auto;
-      margin-bottom: 10vw;
-      padding-bottom: 2vh;
-      width: 95vw; }
-      #contactPage #message header {
-        font-size: 0.7em; }
-      #contactPage #message form section.bigBox {
-        align-items: flex-start; }
-      #contactPage #message form #submitBtn {
-        margin-right: 4vw; }
-      #contactPage #message form section {
-        display: flex;
-        align-items: center; }
-        #contactPage #message form section h3 {
-          width: 20vw;
-          font-size: 0.8em; }
-        #contactPage #message form section input {
-          width: 70vw; }
-        #contactPage #message form section #bigBox {
-          width: 70vw; } }
-@media only screen and (max-width: 768px) and (min-width: 426px) {
-  ui-view #home {
-    width: 100vw;
-    display: flex;
-    flex-direction: column-reverse; }
-    ui-view #home .post {
-      display: flex;
-      flex-direction: column;
-      margin: 0 auto;
-      width: 95vw; }
-      ui-view #home .post img {
-        margin: 0 auto;
-        width: 92vw; }
-      ui-view #home .post article p {
-        font-size: 1em;
-        line-height: 1.5em; }
-    ui-view #home #aboutMe {
-      width: 100vw; }
-      ui-view #home #aboutMe header {
-        margin: 0 auto;
-        width: 80vw;
-        text-align: center; }
-      ui-view #home #aboutMe article {
-        width: 80vw;
-        margin: 0 5vw;
-        display: flex;
-        align-items: center;
-        justify-content: space-around; }
-        ui-view #home #aboutMe article img {
-          width: 40vw;
-          margin: 0 5vw; }
-        ui-view #home #aboutMe article a, ui-view #home #aboutMe article a:visited, ui-view #home #aboutMe article a:hover {
-          color: black; }
-          ui-view #home #aboutMe article a p, ui-view #home #aboutMe article a:visited p, ui-view #home #aboutMe article a:hover p {
-            width: 20vw; }
-        ui-view #home #aboutMe article p {
-          font-size: 1em;
-          text-align: center;
-          margin-bottom: 1vh; }
+27: 				width:100vw;
+28: 				align-items: center;
+29: 				header{
+30: 					width:80vw;
+31: 					text-align:center;
+32: 					border:solid 0.3em $blue;
+33: 				}
+34: 				article{
+35: 					margin-bottom:5vh;
+36: 					width:100vw;
+37: 					display:flex;
 
-  #contactPage {
-    flex-direction: column; }
-    #contactPage #deets {
-      margin: 0 auto;
-      width: 95vw;
-      margin-bottom: 3vh; }
-      #contactPage #deets header {
-        margin: 0 auto;
-        width: 95vw; }
-      #contactPage #deets section ul {
-        width: 90vw;
-        margin: 0 auto; }
-        #contactPage #deets section ul li {
-          width: 90vw;
-          margin: 0 auto; }
-          #contactPage #deets section ul li h1 {
-            width: 17vw; }
-          #contactPage #deets section ul li h2 {
-            width: 70vw;
-            margin-left: 3vw; }
-    #contactPage #message {
-      margin: 0 auto;
-      margin-bottom: 10vw;
-      padding-bottom: 2vh;
-      width: 95vw; }
-      #contactPage #message form {
-        width: 95vw; }
-        #contactPage #message form section.bigBox {
-          align-items: flex-start; }
-        #contactPage #message form #submitBtn {
-          margin-right: 2vw; }
-        #contactPage #message form section {
-          align-items: center; }
-          #contactPage #message form section h3 {
-            width: 20vw;
-            margin-right: 4vw;
-            margin-left: 1vw; }
-          #contactPage #message form section input {
-            width: 65vw; }
-          #contactPage #message form section #bigBox {
-            width: 65vw; } }
-@media only screen and (min-width: 769px) {
-  ui-view #home {
-    width: 80vw; }
-    ui-view #home .post {
-      float: left;
-      display: flex;
-      flex-direction: column;
-      width: 40vw;
-      margin: 0 5vw 2vh 5vw; }
-      ui-view #home .post img {
-        margin: 0 auto;
-        width: 40vw; }
-      ui-view #home .post article p {
-        font-size: .9em;
-        line-height: 1.5em; }
-    ui-view #home #aboutMe {
-      width: 20vw;
-      padding-right: 0;
-      float: right; }
-      ui-view #home #aboutMe header {
-        margin: 0 auto;
-        width: 20vw;
-        text-align: center;
-        background: white; }
-      ui-view #home #aboutMe article {
-        width: 20vw;
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-around; }
-        ui-view #home #aboutMe article img {
-          width: 5vw; }
-        ui-view #home #aboutMe article a, ui-view #home #aboutMe article a:visited, ui-view #home #aboutMe article a:hover {
-          color: black; }
-          ui-view #home #aboutMe article a p, ui-view #home #aboutMe article a:visited p, ui-view #home #aboutMe article a:hover p {
-            width: 12vw;
-            background: white; }
-        ui-view #home #aboutMe article p {
-          padding: 2vh 0;
-          font-size: .8em;
-          text-align: center;
-          margin-bottom: 1vh; }
-
-  #contactPage #deets {
-    width: 40vw;
-    margin-bottom: 3vh; }
-    #contactPage #deets header {
-      margin: 0 auto;
-      width: 40vw; }
-    #contactPage #deets section ul {
-      width: 35vw;
-      margin: 0 auto; }
-      #contactPage #deets section ul li {
-        width: 35vw; }
-        #contactPage #deets section ul li h1 {
-          width: 10vw; }
-        #contactPage #deets section ul li h2 {
-          width: 22vw;
-          padding-left: 2vw; }
-  #contactPage #message {
-    margin-bottom: 10vw;
-    padding-bottom: 2vh;
-    width: 40vw; }
-    #contactPage #message form {
-      width: 40vw; }
-      #contactPage #message form section.bigBox {
-        display: flex;
-        align-items: flex-start; }
-        #contactPage #message form section.bigBox h3 {
-          width: 10vw;
-          margin-right: 2vw; }
-      #contactPage #message form #submitBtn {
-        margin-right: 1vw; }
-      #contactPage #message form section {
-        width: 35vw;
-        margin: 0 auto;
-        align-items: center; }
-        #contactPage #message form section h3 {
-          width: 10vw;
-          margin-right: 2vw; }
-        #contactPage #message form section input {
-          width: 25vw; }
-        #contactPage #message form section #bigBox {
-          width: 25vw; } }
-
-/*# sourceMappingURL=_queries.css.map */
+Backtrace:
+_queries.scss:32
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `_perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:397:in `visit_prop'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block (2 levels) in visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block in visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:431:in `visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block (2 levels) in visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block in visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:431:in `visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block (2 levels) in visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block in visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:431:in `visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block (2 levels) in visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block in visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:431:in `visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:515:in `visit_media'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:159:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/engine.rb:381:in `_render_with_sourcemap'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/engine.rb:298:in `render_with_sourcemap'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:331:in `block in watch'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `call'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Undefined variable: \"$blue\".\A         on line 32 of _queries.scss\A \A 27: 				width:100vw;\A 28: 				align-items: center;\A 29: 				header{\A 30: 					width:80vw;\A 31: 					text-align:center;\A 32: 					border:solid 0.3em $blue;\A 33: 				}\A 34: 				article{\A 35: 					margin-bottom:5vh;\A 36: 					width:100vw;\A 37: 					display:flex;"; }
