--- a/public/css/_colors.scss
+++ b/public/css/_colors.scss
@@ -15,7 +15,9 @@ $red: #9A4645;
 
 //new Color scheme blue and white and black
 	$blue:#1EAAF1;
+		$alt-blue:rgb(39, 66, 136);
 		$op-blue:rgba(#1eaaf1, 0.37);
+		$sup-op-blue: rgba(#1eaaf1, 0.12);
 	$white: rgb(246, 246, 246);
 	$black: rgb(3, 17, 27);
 		$op-black: rgba(3, 17, 27, 0.7);
