--- a/public/html/views/about.html
+++ b/public/html/views/about.html
@@ -27,7 +27,7 @@
   </div>
   <div id="skills">
     <header class="wow fadeInRight" data-wow-delay="1s">
-      <h1>Skills</h1>
+      <h1>SKILLS</h1>
     </header>
     <h4 class="wow fadeInRight fEnd" data-wow-delay="1.05s">FrontEnd</h4>
     <section class="wow fadeInRight frontEnd" data-wow-delay="1.1s"><img class="disp" src="./img/frontEndMan.jpg"/>
