--- a/public/html/views/about.pug
+++ b/public/html/views/about.pug
@@ -29,7 +29,7 @@
 
 	#skills
 		header(data-wow-delay="1s").wow.fadeInRight
-			h1 Skills
+			h1 SKILLS
 		h4(data-wow-delay="1.05s").wow.fadeInRight.fEnd FrontEnd
 		section(data-wow-delay="1.1s").wow.fadeInRight.frontEnd
 			img(src="./img/frontEndMan.jpg").disp
