--- a/public/html/views/proj.pug
+++ b/public/html/views/proj.pug
@@ -1,10 +1,10 @@
 #projPage
 	.card
 		section.body
-			img(src="./img/bNural-2.png", alt="A broken pic..", data-wow-duration="0.3s", data-wow-delay="0.85s").vert.vert2.wow.fadeInLeft
-			img(src="./img/bNural-3.png", alt="A broken pic..", data-wow-duration="0.3s", data-wow-delay="0.75s").hor.hor1.wow.fadeInLeft
-			img(src="./img/bNural.png", alt="A broken pic..", data-wow-duration="0.3s", data-wow-delay="0.65s").vert.vert1.wow.fadeInLeft
-			article(data-wow-duration="0.5s").wow.fadeInRight
+			img(src="./img/bNural-2.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.85s").vert.vert2.wow.fadeInLeft
+			img(src="./img/bNural-3.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.65s").hor.hor1.wow.fadeInLeft
+			img(src="./img/bNural.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.45s").vert.vert1.wow.fadeInLeft
+			article(data-wow-duration="1s").wow.fadeIn
 				h4 bNural
 				p Is a site that I built for my no-server project at DevMountain.
 				p It allows the user to generate Binaural beats to control their mood.
